# pod

./: .gitignore  README.md  example.env  pyproject.toml  tasks.py
.github/workflows/: ci.yml
src/: entrypoint.sh
src/pod/: asgi.py  manage.py  settings.py  urls.py  wsgi.py
src/pod/accounts/: apps.py
src/pod/examples/: views.py
src/pod/printing/: __init__.py  engine.py  generation.py  responses.py  views.py
src/pod/templates/invoice/: invoice.css  invoice.html
src/pod/templates/ticket/: ticket-extra.typ  ticket.typ
src/presentation/: main.typ
