[project]
name = "pod"
description = ""
readme = "README.md"
authors = [
    {name = "Jonathan Moss", email = "jonathan@miss-scarlet.house"}
]
version = "0"
requires-python = ">=3.13,<4"

dependencies = [
    "django >= 5.1.5, < 6",
    "django-environ >= 0.12.0, < 1.0",
    "psycopg [binary, pool] >= 3.2.0, < 4.0.0",
    "uvicorn >= 0.34.0, < 1.0",
    "uvloop  >= 0.21.0, < 1.0.0; sys_platform != 'win32'",
    "sentry-sdk >= 2.22.0, < 3.0",
    "httptools >= 0.6.4, < 1.0",
    "weasyprint>=65.1",
    "typst>=0.13.4",
]

[project.scripts]
manage = "pod.manage:main"

[dependency-groups]
dev = [
    "django-stubs[compatible-mypy]>=5.1.3,<6",
    "invoke>=2.2.0,<3",
    "ipython>=8.32.0,<9",
    "mypy[mypyc]>=1.15.0,<2",
    "ruff>=0.9.8,<0.10",
]


[tool.hatch.build.targets.sdist]
include = ["src/pod"]

[tool.hatch.build.targets.wheel]
include = ["src/pod"]

[tool.hatch.build.targets.wheel.sources]
"src/pod" = "pod"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
plugins = ["mypy_django_plugin.main"]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "environ"

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = "weasyprint.*"


[tool.django-stubs]
django_settings_module = "pod.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "pod.settings"
addopts = "--rootdir src --spec"
norecursedirs = ".git .venv"
spec_header_format = "{test_case} [{module_path}]:"

markers = """
    functional: functions/end-to-end tests
    system: Regular integration and unit tests
"""

# We should never be dealing with naive datetimes. If we need to test with
# naive datetimes, we should explicitly catch the warning in the test.
# Otherwise, naive datetimes should raise errors.
filterwarnings = """
    error:.*received a naive datetime:RuntimeWarning:django.db.models.fields
"""

[tool.coverage.run]
omit = ["**/migrations/*"]

[tool.ruff.lint]
select = [
    "A",  # flake8-builtins
    "B0", # flake8-bugbear (not opinionated)
    "E", # pycodestyle (errors)
    "F", # pyflake
    "W", # pycodestyle (warnings)
    "S", # flake8-bandit
    "I", # isort
    "C90"  # mccabe
]

[tool.ruff.lint.per-file-ignores]
"src/tests/*" = ["S101"]

[tool.ruff.lint.mccabe]
max-complexity = 15
